--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+  ul {
+      list-style: none;
+  }
+  
   .attribution { font-size: 11px; text-align: center; }
 
     .attribution a { color: hsl(228, 45%, 44%); }
