--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,7 @@ ul {
 }
 
 .card-container {
-  width: 80%;
+  max-width: 80%;
 }
 
 .card-text {
@@ -106,6 +106,31 @@ ul {
   color: hsl(228, 45%, 44%);
 }
 
+@media (min-width: 768px) and (max-width: 1024px) {
+  body {
+    margin: 10px 24px;
+  }
+
+  .card-container {
+    flex-direction: column-reverse;
+    max-width: 75%;
+  }
+
+  .card-text {
+    padding: 50px;
+    border-radius: 0 0 8px 8px;
+  }
+
+  .stats {
+    justify-content: center;
+    margin: 0;
+  }
+
+  .card-image {
+    border-radius: 8px 8px 0 0;
+  }
+}
+
 @media (max-width: 767px) {
   body {
     margin: 120px 24px;
@@ -134,7 +159,7 @@ ul {
 
   .card-container {
     flex-direction: column-reverse;
-    width: 100%;
+    max-width: 100%;
   }
 
   .card-text {
